...
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>


        <EditText
            android:singleLine="true"
            android:id="@+id/etCountryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_country_name"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
...
            android:background="@drawable/background_countryname"
            app:layout_constraintTop_toBottomOf="@id/tvSearchUniversities"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/tvSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/search"
            android:gravity="center"
            android:background="@color/blue"
...
