<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <fragment
            app:defaultNavHost="true"
            android:id="@+id/login_nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            app:navGraph="@navigation/university_navigation"
            android:layout_height="match_parent">
        </fragment>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>